package.json updated

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "YasserCR",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
